using MediatR;

namespace Healthcare.Domain.Common;

public abstract class DomainEvent : INotification;