namespace Healthcare.Domain.Identity;

public enum Role
{
    Doctor,
    Patient
}
